# Zivia

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  data.py  main.py  pyproject.toml  quiz_brain.py  run_zivia.py  setup.cfg  ui.py
src/: quiz_brain.py
src/zivia/: data.py  main.py  quiz_brain.py  ui.py
tests/: test_quiz_brain.py
zivia/: main.py
