[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zivia"
version = "0.1.0"
description = "A quiz game called Zivia"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Samy Barsoum", email = "samyb.samir@example.com" }]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["zivia"]
include-package-data = true
