[metadata]
name = zivia
version = 1.1.0
author = samysamir-dev
description = A quiz game called Zivia
long_description = file: README.md
long_description_content_type = text/markdown
license = Unlicense
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
include_package_data = true
python_requires = >=3.10

[options.packages.find]
where = src
